--- a/atlantis.html
+++ b/atlantis.html
@@ -35,7 +35,7 @@
   		Fall 2017 | Interaction Design Overview | <a href="https://www.youtube.com/watch?v=gH_H0uQTa00&feature=youtu.be" target="_blank">Video</a>
   	</div>
   	
-  	<div id="atlantis" class="margin-small">
+  	<div id="atlantis" class="margin-medium">
 	  	<div class="content">
 	  	<img src="pics/atlantis/atlantisyellow.jpg" class="big-pic">
 			<div class="context-summary">
@@ -64,7 +64,7 @@
 	  	</div>
 
 	  	<div class="section-title">PROCESS</div>
-	  	<div class="process-overview margin-small">
+	  	<div class="process-overview">
 
 			<div class="process-title">Data Modeling</div>
 			<div class="panel">
@@ -76,8 +76,8 @@
 			  	For example, "Destination" is a pretty important attribute, while "Maximum Takeoff Weight" is probably less relevant to the users. After determining what data was valuable and what was not, I began modeling that data out on paper, sketching out groupings of information.
 			  	<p>Once I got a feel for the data I would be working with, I was introduced to my users and stakeholders. I summarized their needs and mapped specific data and ways to display data to the individuals with whom will be using this display.</p>
 			  </div>
-			  <img class="product-pic-medium" src="pics/atlantis/data2.jpg" style="margin-left: 5%; margin-right: 2%">
-			  <img class="product-pic-medium" src="pics/atlantis/data3.jpg" style="margin-right: 5%; margin-left: 2%;">
+			  <img class="product-pic-medium" src="pics/atlantis/data2.jpg">
+			  <img class="product-pic-medium" src="pics/atlantis/data3.jpg">
 			</div>
 
 			<div class="process-title">Wireframing</div>
@@ -105,17 +105,17 @@
 			  	My final design reused elements from the second design, but arranged them in what I think is a clearer and more visually appealing manner. I shortened the weather portion to three days of information, added a section at the bottom regarding the PTF pass (which I would later remove), and sized the data tables accordingly.
 			  </div>
 
-			  <p style="text-align: center">After selecting the third design as the one with which I would move forward, the next step was transforming the sketch into a digital design. I started this process with simple boxes and lines.</p>
+			  <p>After selecting the third design as the one with which I would move forward, the next step was transforming the sketch into a digital design. I started this process with simple boxes and lines.</p>
 			  <img class="product-pic-bigger" src="pics/atlantis/wireframe4.jpg">
-			  <p style="text-align: center">Next, I started experimenting with text, color, and filling in the middle section.</p>
+			  <p>Next, I started experimenting with typography, color, and filling in the middle section. Initally, I started pulling colors from an arbitrary map I chose. However, I later created a map to better align with a cleaner, more purposeful color scheme (below).</p>
 			  <img class="product-pic-bigger" src="pics/atlantis/wireframe5.png">
-			  <p style="text-align: center">After filling in more data, I chose the following color scheme.</p>
+			  <p>After filling in more data, I chose the following color scheme. I chose to use different hues of blue because it is a calming and professional color. It has more depth than a simple black background, but white text will still be easy to read against it.</p>
 			  <img class="product-pic-bigger" src="pics/atlantis/color.png">
 			</div>
 
 			<div class="process-title">Why It Works</div>
 			<div class="panel">
-			  <img class="product-pic-medium" src="pics/atlantis/panel1.png" style="margin-left: 10%; margin-top: 20px">
+			  <img class="product-pic-medium" src="pics/atlantis/panel1.png">
 			  <div class="caption2">
 			  	<p>1) PTF eligible flights are highlighted with a check mark.</p>
 
@@ -126,7 +126,7 @@
 				<p>4) Extraneous information is left out.</p>
 			  </div>
 
-			  <img class="product-pic-medium" src="pics/atlantis/panel2.png" style="margin-left: 10%; margin-top: 20px">
+			  <img class="product-pic-medium" src="pics/atlantis/panel2.png">
 			  <div class="caption2">
 			  	<p>1) The timeline allows for quick and easy lookup of the next ferry, plane, and train.</p>
 
@@ -137,7 +137,7 @@
 				<p>4) The weather is highlighted but at the bottom of the screen, so people can focus on the more time-sensitive information.</p>
 			  </div>
 
-			  <img class="product-pic-medium" src="pics/atlantis/panel3.png" style="margin-left: 10%; margin-top: 20px">
+			  <img class="product-pic-medium" src="pics/atlantis/panel3.png">
 			  <div class="caption2">
 			  	<p>1) Like the first panel, table format provides easy-to-read information.</p>
 
