--- a/newstagram.html
+++ b/newstagram.html
@@ -30,8 +30,9 @@
         <div id="hamburger" class="fa fa-bars" onclick="toggleNav()"></div>
       </div>
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
-	<div id="newstagram" class="margin-small">
+	
 	  	<div class="page-title">NEWSTAGRAM</div>
+	  	<div id="newstagram" class="margin-medium">
 	  	<div class="project-info">
 	  		Spring 2018 | Social Web | <a href="https://adobe.ly/2FygOXL" target="_blank">View the Prototype</a>
 	  	</div>
