--- a/upark.html
+++ b/upark.html
@@ -125,7 +125,7 @@
 			<div class="process-title">Storyboard</div>
 			<div class="panel">
 			  <p>Based on several “how might we” statements, the team created several storyboards depicting potential early features of the platform. The storyboard below illustrates a scenario in which both renters and lenders are satisfied by the security and ease of use of the app.</p>
-			  <img style="width: 80%; margin-left: 10%; margin-right: 10%" src="pics/upark/storyboard.png">
+			  <img style="width: 100%" src="pics/upark/storyboard.png">
 			  <div class="caption-grid" style="margin-left: 10%">
 			  	"Plenty of driveways sit vacant while individuals who need a parking spot waste time looking for street parking"
 			  </div>
