fixed mobile nav bug

--- a/atlantis.html
+++ b/atlantis.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="styles/contact.css">
     <link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119412150-1"></script>
     <script>
