updated contact section and fixed page bug

--- a/about.html
+++ b/about.html
@@ -26,10 +26,10 @@
   <body>
     <meta name="viewport" content="width=device-width">
       <div id="my-nav" class="nav-colored">
-        <div class="nav-logo" onclick="openPage('index.html')">EMILY PORAT</div>    
-        <div class="nav-item" id="home-nav-item"  onclick="openPage('index.html')">PROJECTS</div>
-        <div class="nav-item" onclick="openPage('about.html')">ABOUT</div>
-        <div class="nav-item" onclick="openPage('pics/resume.pdf')" target="_blank">RESUME</div>
+        <a class="nav-logo" href="index.html">EMILY PORAT</a>    
+        <a class="nav-item" id="home-nav-item" href="index.html">PROJECTS</a>
+        <a class="nav-item" href="about.html">ABOUT</a>
+        <a class="nav-item" href="pics/resume.pdf" target="_blank">RESUME</a>
         <div id="hamburger" class="fa fa-bars" onclick="toggleNav()"></div>
       </div>
 
@@ -49,26 +49,25 @@
             For a long time, I thought I wanted to be a software engineer. It seemed like all the cool kids were doing it, and I liked coding. But by the beginning of my junior year, with an engineering internship and several CS classes under my belt, I realized that I didn't want to stare at a computer screen for 40 hours a week for the rest of my life. Throughout my junior year, I found the work I did in my HCI classes much more engaging and fun, so I decided to make the pivot to UX.
             </p>
             <p>
-            So what have I learned in my (almost) 21 years on this planet? Embrace change. Failure is a step on the path to success. Sometimes things happen for a reason, and sometimes they don't. It's how you bounce back that matters.
+            Warning: this is about to get cheesy. So what have I learned in my (almost) 21 years on this planet? Embrace change. Failure is a step on the path to success. Sometimes things happen for a reason, and sometimes they don't. It's how you bounce back that matters.
             </p>
         </div>
       </div>
 
       <div id="contact" class="padding-medium">
-        <div class="contact-text" id="left">
+        <div class="contact-text">
           <p class="contact-title">Want to chat? Let's get in touch!</p>
           <p><a href="mailto:eporat@andrew.cmu.edu" target="_top">eporat@andrew.cmu.edu</a></p>
           <p>(650) 996 - 8836</p>
         </div>
-        <div class="contact-text" id="right">
-          <p class="contact-title">Or find me on...</p>
-          <div id="social">
-            <a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a>
-            <p><a href="https://github.com/emilyporat/">GitHub</a></p>
-            <p><a href="https://www.facebook.com/emily.porat">Facebook</a></p>
-          </div>
+        <div id="social" class="padding-medium">
+          <a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a>
+          |
+          <a href="https://github.com/emilyporat/">GitHub</a>
+          |
+          <a href="https://www.facebook.com/emily.porat">Facebook</a>
         </div>
-        <div id="copyright">© Emily Porat 2018. All Rights Reserved.</div>
+        <div id="copyright">© Emily Porat 2018</div>
       </div>
       </meta>
     </body>
