--- a/newstagram.html
+++ b/newstagram.html
@@ -22,12 +22,14 @@
   </head>
 
   <body>
-  <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width">
       <div id="my-nav" class="nav-colored">
-        <a class="nav-logo" href="index.html">EMILY PORAT</a>    
-        <a class="nav-item" id="home-nav-item" href="index.html">PROJECTS</a>
-        <a class="nav-item" href="about.html">ABOUT</a>
-        <a class="nav-item" href="pics/resume.pdf" target="_blank">RESUME</a>
+        <a class="nav-logo" href="index.html">EMILY PORAT</a> 
+        <div id="nav-items">   
+        <a class="nav-item" id="home-nav-item" onclick="toggleNav()" href="index.html">PROJECTS</a>
+        <a class="nav-item" href="about.html" onclick="toggleNav()">ABOUT</a>
+        <a class="nav-item" href="pics/resume.pdf" onclick="toggleNav()">RESUME</a>
+        </div>
         <div id="hamburger" class="fa fa-bars" onclick="toggleNav()"></div>
       </div>
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
@@ -68,17 +70,18 @@
 		</div>
 
 	  	<div class="section-title">PROCESS</div>
+	  	<div class="panel">The process we laid out for this 6-week project is as follows: research, interviews, ideation, wireframing, user testing, and prototyping. View the <a href="pics/newstagram/report.pdf">final report here</a>!</div>
 
 		<div class="process-title">Research</div>
 		<div class="panel">
-		  <p>After doing initial research on existing works that offered different approaches to image sharing on social media, we decided to take a step back and develop a deeper understanding of our problem space. Our own experiences with the platform, coupled with the implications of Instagram accounts such as Essena O’Neill’s and SocalityBarbie, offered some initial insights on user behavior on Instagram and how pressure to post appealing and high quality content might lead to disingenuous, homogenous behavior. Furthermore, it shed some light on how the nature of social media platforms and the use of social currency indicators could shape these actions.
+		  <p>To better understand the psychology behind decision making on Instagram, and the influence of social media platforms as a context for user behavior, we read five research papers on these topics. The questions we were looking to answer were 'What are some problematic aspects of Instagram and social media?' and 'What is the psychology behind trends in social media consumption?'
 		  </p>
-
 		  <p>
-		  Some papers offered insight on how the context of a social media platform can nudge users toward certain behaviors. “Performances of the Self on Twitter” suggests that users adjust their “performances of the self” to fit the context of community wide conversation. This implies that because interactions are being placed within the context of a social media platform, users are likely to shift behavior to connect with, gain sympathy and understanding from, and entertain audiences, all while maintaining a sense of personal identity. “I Tweet Honestly, I Tweet Passionately” also discusses the topic of an imagined audience, and shows that when users deal with multiple audiences online, they utilize different techniques to appeal to each one, in a way mimicking the multiplicity of real-life interaction. Others pointed toward the potential for virtual interactions on social media to foster development of “alternate forms of the self”. “Can You See The Real Me?” suggests that the Internet, when compared to face to face interaction, offers users the ability to showcase their “true self” and project idealized qualities onto their partners. 
-		  </p>
-
-		  <p>It suggests that online communication, when done right, can lead to deep and meaningful relationships at a “breathtaking speed” due to the nature of Internet interactions.  Other papers like “Follow Me and Like My Beautiful Selfies” and “Let Me Take a Selfie” offer a contrasting perspective, pointing at the negative consequences that photo-sharing on the Internet that produce. In these papers, narcissism is shown to be directly linked with the desire for a large social network. Furthermore, peer comparison is shown to be influenced by social currency indicators, like the number of likes or followers a user has. Some users develop unhealthy and unrealistic standards for beauty, and resort to harmful practices to achieve a “desirable” appearance. Others still might engage in social comparison with those they think they are superior to, to boost their own self esteem. Insights from these papers point at the delicate balance between positive and negative consequences of interactions on the Internet.	
+			These were the final takeaways from the literature:
+			<li>Users show their desire to know themselves better through curation of self-image online, and wish for others to see them as they see themselves</li>
+			<li>Narcissism is directly linked with the desire for a large social network </li>
+			<li>Peer comparison is fueled by the use of numbers that represent social currency</li>
+			<li>Users adjust “performances of the self” to fit the context of community-wide conversation</li>
 		  </p>
 		</div>
 
@@ -87,22 +90,27 @@
 		  	<p>To complement this knowledge, we also sought to better understand the social media platforms that are commonly used nowadays, how usage and behavior might vary from platform to platform, and the features that users like and dislike about each one. We were also curious about how platform features might shape the way users interact with each other while on the app. 
 		  	</p>
 
-		  	<p>
-			Specifically, we were fascinated by the trend of users having multiple Instagram accounts: an Insta and a Finsta (fake Insta). From our prior knowledge, the former tends to be more curated and reserved for posts of higher quality, while the latter tends to be more unfiltered and removed from the need to garner likes. We wondered what the influences were behind user motives on both kinds of account and how this dichotomy came to exist on a single platform. We noticed the same kind of trend of unfiltered, relaxed image posting on Snapchat as well and wanted to gather more information from examining users in real life. 
-			</p>
-
 			<p>
 			We interviewed five Instagram users at CMU that vary in their use of image sharing social media platforms. For each user, we asked them about their intentions behind downloading Instagram, their common interactions with other users’ content and within the app in general, the number of accounts they have, and the type of content they post. We repeated these questions for the other social media platforms users frequently used. Finally, users were asked to demonstrate their typical thought process while using Instagram while performing a walkthrough. To wrap up, we asked each user what they believed “authenticity” to mean, either as a standalone word or in the context of social media.
 			</p>
 
 			<p>
-			From our interviews, we saw that overall, users seemed to care a lot about self-presentation on Instagram. Many interviewees mentioned thinking carefully about filters, composition, and caption choices and whether or not they would be well received by people they follow. One extreme of this was a user thinking of possible kinds of pictures to post on Instagram, and then getting that particular type of photo taken. There was also a split between people that disliked the “competitive” nature of Instagram and those that enjoyed the high level of quality that Instagram photos tended to have. An interviewee commented that as a designer, they appreciated the fact that looking at the high quality feeds of others inspired their own work. Others still mentioned that although Instagram involved a lot of work (selecting photos, filtering them, and adding appropriate captions), they still enjoyed being able to select special “highlights” of their lives to display on the platform, showcase them to friends, and learn more about the “highlights” of others’ lives as well. Another interesting aspect was the use of multiple accounts. Users expressed their joy in being able to see different sides of people’s personalities through the variety in content. Along this vein, users also created different accounts, meant to cater to specific interests, like graphic design, photography, and finstas, and to different groups of people.
+			These were the final interview takeaways:
+			<li>Some users enjoy the curated and high content quality of Instagram</li>
+			<li>Users separate accounts on Instagram to cater towards different audiences or show different parts of themselves </li>
+			<li>Users see Instagram feeds as diaries for recording and sharing casual accounts as well as more curated moments</li>
 			</p>
+		</div>
+
+		<div class="process-title">Ideation</div>
+		<div class="panel">
+			After gathering all that insight, we spent a work session translating what we learned into concrete features. We translated this list to a set of screen flows.
 		</div>
 
 		<div class="process-title">Wireframes</div>
 		<div class="panel">
-			<p>In creating our initial wireframes, we thought carefully about the insights collected from our research. Originally, we had approached the project with a goal of making Instagram more “authentic” and less prone to the homogeneity and calculated nature of posts nowadays. However, the results of our interviews and our struggle to craft a definition of “authenticity” for us to build toward made it clear that “authenticity” meant different things for everyone. A user could be authentic in their passion for curating beautiful, quality posts while another could see unfiltered, candid photos as their ideal of authentic. An endeavor to de-emphasize the over-curation of photos might be against the wishes of our target market, and enacting such a wide cultural change might be infeasible. Thus, we evolved our end goal to focus on fostering an environment where users would feel comfortable expressing their truest selves and posting the content they want to post, whether it’s ultra-curated, completely unfiltered, or somewhere in between.
+			<p>In creating our initial wireframes, we thought carefully about the insights collected from our research. Originally, we had approached the project with a goal of making Instagram more “authentic” and less prone to the homogeneity and calculated nature of posts nowadays. However, the results of our interviews and our struggle to craft a definition of “authenticity” for us to build toward made it clear that “authenticity” meant different things for everyone.</p> 
+			<p>A user could be authentic in their passion for curating beautiful, quality posts while another could see unfiltered, candid photos as their ideal of authentic. An endeavor to de-emphasize the over-curation of photos might be against the wishes of our target market, and enacting such a wide cultural change might be infeasible. Thus, we evolved our end goal to focus on fostering an environment where users would feel comfortable expressing their truest selves and posting the content they want to post, whether it’s ultra-curated, completely unfiltered, or somewhere in between.
 		  	</p>
 		  	<img class="wireframe" src="pics/newstagram/wireframes.png">
 		  	<p>
@@ -112,21 +120,31 @@
 
 		<div class="process-title">User Testing</div>
 		<div class="panel">
-		  	<p>After speed dating our initial wireframes with five users to test for intuitiveness, whether or not they would enjoy using the app or prefer the changes compared to how Instagram is now, and whether or not we achieved our goal of creating a comfortable, accepting environment for users. We also collected suggestions users might have for improvement.
-		  	</p>
+			We speed dated our initial wireframes with five users to test for intuitiveness, whether or not they would enjoy using the app or prefer the changes compared to how Instagram is now, and whether or not we achieved our goal of creating a comfortable, accepting environment for users. We also collected suggestions users might have for improvement.
+		  	<div id="secondary-pics">
+		  		<img class="pics-2" src="pics/newstagram/testing1.jpg">
+				<img class="pics-2" src="pics/newstagram/testing2.jpg">
+			</div>
+			<p>
 			The majority of users commented on our automatic tags and explore page with possible improvements. Users enjoyed the use of automatic tags (generated for photos depending on content) because they allowed for facilitated search, which they felt Instagram doesn’t currently provide. However, they were worried that automatic tags would sometimes be incorrect or irrelevant, and suggested manual tag entry as a way to prevent against that. 
 			<p>
 			Users also commented on the functionality of the explore page. Most of them enjoyed the different filtering methods and thought they were simple and effective. Although they thought it was a large improvement over the current explore page, they suggested combining current functions, like searching by tag and by location, to make the feature more powerful. 
 			</p>
+		</div>
 
-			</div>
-		  	<div class="next-project" onclick="openPage('chutzpow.html')" style="background-color: #662C92; float: right"> 
+		<div class="process-title">Prototyping</div>
+		<div class="panel">
+			We incorporated the feedback we got into the prototype, which we created with Adobe XD. View the prototype <a href="https://adobe.ly/2FygOXL">here</a>.
+		</div>
+
+
+		  	<a href="chutzpow.html" class="next-project" style="background-color: #662C92; float: right"> 
 		  		CHUTZ-POW >
-		  	</div>
+		  	</a>
 
-		  	<div class="next-project" onclick="openPage('atlantis.html')" style="background-color: #662C92; float: left"> 
+		  	<a href="atlantis.html" class="next-project" style="background-color: #662C92; float: left"> 
 		  		< ATLANTIS HUB
-		  	</div>
+		  	</a>
 	  	</div>
 
   	</div>
