--- a/upark.html
+++ b/upark.html
@@ -22,12 +22,14 @@
   </head>
 
   <body>
-  <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width">
       <div id="my-nav" class="nav-colored">
-        <a class="nav-logo" href="index.html">EMILY PORAT</a>    
-        <a class="nav-item" id="home-nav-item" href="index.html">PROJECTS</a>
-        <a class="nav-item" href="about.html">ABOUT</a>
-        <a class="nav-item" href="pics/resume.pdf" target="_blank">RESUME</a>
+        <a class="nav-logo" href="index.html">EMILY PORAT</a> 
+        <div id="nav-items">   
+        <a class="nav-item" id="home-nav-item" onclick="toggleNav()" href="index.html">PROJECTS</a>
+        <a class="nav-item" href="about.html" onclick="toggleNav()">ABOUT</a>
+        <a class="nav-item" href="pics/resume.pdf" onclick="toggleNav()">RESUME</a>
+        </div>
         <div id="hamburger" class="fa fa-bars" onclick="toggleNav()"></div>
       </div>
 
@@ -155,13 +157,13 @@
 			  <img class="product-pic-medium" src="pics/upark/mood.jpg" style="margin-left: 5%">
 			  <img class="product-pic-medium" src="pics/upark/style.jpg" style="margin-right: 5%">
 			</div>
-		  	<div class="next-project" onclick="openPage('miles.html')" style="background-color: #EE6B4D; float: right"> 
+		  	<a href="miles.html" class="next-project" style="background-color: #EE6B4D; float: right"> 
 		  		MILES >
-		  	</div>
+		  	</a>
 
-		  	<div class="next-project" onclick="openPage('zensors.html')" style="background-color: #EE6B4D; float: left"> 
+		  	<a href="zensors.html" class="next-project" style="background-color: #EE6B4D; float: left"> 
 		  		< ZENSORS
-		  	</div>
+		  	</a>
 	  	</div>
 
 	  </div>
