changed font, claned up stuff

--- a/about.html
+++ b/about.html
@@ -40,35 +40,33 @@
           <img src="pics/emily.jpg" id="about-pic">
           
           <div id="about-description">
-            Hi there! If you want to know a little bit more about me, you’ve come to the right place. I'm originally from Mountain View, California, but I went to Carnegie Mellon in search of the East Coast experience. Little did I know, Pittsburgh is closer to Ohio than New York - but it's all good, they have good pierogies.
+            Hi there! If you want to know a little bit more about me, you’ve come to the right place. I'm originally from Mountain View, California, but I went to Carnegie Mellon in search of the East Coast experience. Little did I know, Pittsburgh is closer to Ohio than New York - but it's all good, they've got good pierogies.
             <p>
             My first exposure to anything remotely related to UI/UX was during my senior year in high school at <a href="http://www.freestyleacademy.rocks/">Freestyle Academy</a>, where I took Web/Audio Production and Graphic Design. I learned that I liked making pretty websites, and found a creative outlet that wasn't writing (my other passion in high school).
             </p>
            <p>
-            When I came to CMU, I was planning on majoring in IS and minoring in Design, but I found that HCI was a more encompassing program for what I wanted to do, so I applied and got in to the minor my sophomore year.
-            </p>
-           <p>
-            For a long time, I thought I wanted to be a software engineer. It seemed like all the cool kids were doing it, and I liked coding. But by the beginning of my junior year, with an engineering internship and several CS classes under my belt, I realized that I didn't want to stare at a computer screen for 40 hours a week for the rest of my life. Throughout my junior year, I found the work I did in my HCI classes much more engaging and fun, so I decided to make the pivot to UX.
+            During my first two years at CMU, I wanted to be a software engineer. It seemed like all the cool kids were doing it, and I liked coding. But by the beginning of my junior year, with an engineering internship and several CS classes under my belt, I realized that I didn't want to stare at a computer screen for 40 hours a week for the rest of my life. Throughout my junior year, I found the work I did in my HCI classes much more engaging and fun, so I decided to make the pivot to UX.
             </p>
             <p>
-            Warning: this is about to get cheesy. So what have I learned in my (almost) 21 years on this planet? Embrace change. Failure is a step on the path to success. Sometimes things happen for a reason, and sometimes they don't. It's how you bounce back that matters.
+            So what's next? I'm on track to graduate in May of 2019, and ideally I'll be on my way in to a UX position at a tech or consulting company. Stay tuned!
             </p>
         </div>
       </div>
 
       <div id="contact" class="padding-medium">
+        <div class="contact-title">Want to chat? Let's get in touch!</div> 
         <div class="contact-text">
-          <p class="contact-title">Want to chat? Let's get in touch!</p>
-          <p><a href="mailto:eporat@andrew.cmu.edu" target="_top">eporat@andrew.cmu.edu</a></p>
+          <a href="mailto:eporat@andrew.cmu.edu" target="_top">eporat@andrew.cmu.edu</a>
           <p>(650) 996 - 8836</p>
+          <div id="social" class="padding-medium">
+            <a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a>
+            | 
+            <a href="https://github.com/emilyporat/">GitHub</a>
+            |
+            <a href="https://www.facebook.com/emily.porat">Facebook</a>
+          </div>
         </div>
-        <div id="social" class="padding-medium">
-          <a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a>
-          |
-          <a href="https://github.com/emilyporat/">GitHub</a>
-          |
-          <a href="https://www.facebook.com/emily.porat">Facebook</a>
-        </div>
+
         <div id="copyright">© Emily Porat 2018</div>
       </div>
       </meta>
