--- a/newstagram.html
+++ b/newstagram.html
@@ -149,17 +149,17 @@
 
   	</div>
       <div id="contact" class="padding-medium">
+        <div class="contact-title">Want to chat? Let's get in touch!</div> 
         <div class="contact-text">
-          <p class="contact-title">Want to chat? Let's get in touch!</p>
-          <p><a href="mailto:eporat@andrew.cmu.edu" target="_top">eporat@andrew.cmu.edu</a></p>
+          <a href="mailto:eporat@andrew.cmu.edu" target="_top">eporat@andrew.cmu.edu</a>
           <p>(650) 996 - 8836</p>
-        </div>
-        <div id="social" class="padding-medium">
-          <a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a>
-          |
-          <a href="https://github.com/emilyporat/">GitHub</a>
-          |
-          <a href="https://www.facebook.com/emily.porat">Facebook</a>
+          <div id="social" class="padding-medium">
+            <a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a>
+            | 
+            <a href="https://github.com/emilyporat/">GitHub</a>
+            |
+            <a href="https://www.facebook.com/emily.porat">Facebook</a>
+          </div>
         </div>
         <div id="copyright">© Emily Porat 2018</div>
       </div>
