--- a/zensors.html
+++ b/zensors.html
@@ -35,7 +35,7 @@
 
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
   	<div class="page-title">ZENSORS</div>
-  	<div class="project-info">Spring 2018 | HCI Undergraduate Research | <a href="https://www.zensors.com/">Website</a> </div>
+  	<div class="project-info">Spring 2018 | HCI Undergraduate Research | <a href="https://www.zensors.com/">Website</a></div>
   	<div id="zensors" class="margin-small">
   		<img src="pics/zensors/zensorsgray.jpg" class="big-pic">
 	  	<div class="content">
@@ -236,19 +236,18 @@
 		  	</a>
 	  	</div>
 	</div>
-
       <div id="contact" class="padding-medium">
+        <div class="contact-title">Want to chat? Let's get in touch!</div> 
         <div class="contact-text">
-          <p class="contact-title">Want to chat? Let's get in touch!</p>
-          <p><a href="mailto:eporat@andrew.cmu.edu" target="_top">eporat@andrew.cmu.edu</a></p>
+          <a href="mailto:eporat@andrew.cmu.edu" target="_top">eporat@andrew.cmu.edu</a>
           <p>(650) 996 - 8836</p>
-        </div>
-        <div id="social" class="padding-medium">
-          <a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a>
-          |
-          <a href="https://github.com/emilyporat/">GitHub</a>
-          |
-          <a href="https://www.facebook.com/emily.porat">Facebook</a>
+          <div id="social" class="padding-medium">
+            <a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a>
+            | 
+            <a href="https://github.com/emilyporat/">GitHub</a>
+            |
+            <a href="https://www.facebook.com/emily.porat">Facebook</a>
+          </div>
         </div>
         <div id="copyright">© Emily Porat 2018</div>
       </div>
