--- a/chutzpow.html
+++ b/chutzpow.html
@@ -123,13 +123,13 @@
 				</p>
 			</div>
 
-			<div class="process-title">Entity Relationship Diagram</div>
+<!-- 			<div class="process-title">Entity Relationship Diagram</div>
 			<div class="panel">
 			  <p>
 			  	Kenny took the lead on creating an Entity Relationship Diagram
 			  	<img src="pics/chutzpow/erd.jpeg" style="width: 100%; margin-top: 5%; margin-bottom: 5%">
 			  </p>
-			</div>
+			</div> -->
 
 			<div class="process-title">Wireframes</div>
 			<div class="panel">
