--- a/l&d.html
+++ b/l&d.html
@@ -18,20 +18,18 @@
       gtag('js', new Date());
 
       gtag('config', 'UA-119412150-1');
+
+      // load other reused files
+      $(function() {
+      	$('#nav').load('http://www.emilyporat.com/nav.html');
+      });
     </script>
   </head>
 
+  </html>
   <body>
     <meta name="viewport" content="width=device-width">
-      <div id="my-nav" class="nav-colored">
-        <a class="nav-logo" href="index.html">EMILY PORAT</a> 
-        <div id="nav-items">   
-        <a class="nav-item" id="home-nav-item" onclick="toggleNav()" href="index.html">PROJECTS</a>
-        <a class="nav-item" href="about.html" onclick="toggleNav()">ABOUT</a>
-        <a class="nav-item" href="pics/resume.pdf" onclick="toggleNav()">RESUME</a>
-        </div>
-        <div id="hamburger" class="fa fa-bars" onclick="toggleNav()"></div>
-      </div>
+    <div id="nav"></div>
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	
 	  	<div class="page-title">LEARNING & DEVELOPMENT PORTAL</div>
