trying to make nav shit work

--- a/l&d.html
+++ b/l&d.html
@@ -21,7 +21,7 @@
 
       // load other reused files
       $(function() {
-      	$('#nav').load('http://www.emilyporat.com/nav.html');
+      	$('#nav').load('http://emilyporat.com/nav.html');
       });
     </script>
   </head>
