--- a/l&d.html
+++ b/l&d.html
@@ -22,6 +22,7 @@
       // load other reused files
       $(function() {
       	$('#nav').load('http://emilyporat.com/nav.html');
+      	$('#footer').load('http://emilyporat.com/footer.html');
       });
     </script>
   </head>
@@ -157,21 +158,7 @@
 	  	</div>
 
   	</div>
-      <div id="contact" class="padding-medium">
-        <div class="contact-title">Want to chat? Let's get in touch!</div> 
-        <div class="contact-text">
-          <a href="mailto:eporat@andrew.cmu.edu" target="_top">eporat@andrew.cmu.edu</a>
-          <p>(650) 996 - 8836</p>
-          <div id="social" class="padding-medium">
-            <a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a>
-            | 
-            <a href="https://github.com/emilyporat/">GitHub</a>
-            |
-            <a href="https://www.facebook.com/emily.porat">Facebook</a>
-          </div>
-        </div>
-        <div id="copyright">© Emily Porat 2018</div>
-      </div>
+  		<div id="footer"></div>
   	</meta>
   </body>
 
